--- a/index.html
+++ b/index.html
@@ -94,7 +94,14 @@
               <li><a href="#">Stadium's</a></li>
               <li><a href="#">Telecommunications </a></li>
               <li><a href="#">Banks </a></li>
+              <li><a href="#">Power Electric supplies  </a></li>
+              <li><a href="#">Factories </a></li>
+              <li><a href="#">Car show </a></li>
+              <li><a href="#">Travel Agent </a></li>
+              <li><a href="#">Government institutions </a></li>
               <li><a href="#">Construction </a></li>
+              <li><a href="#">Water supply </a></li>
+              <li><a href="#">Gym  </a></li>
 
               <!-- <li><a href="about.html">About</a></li>
               <li><a href="team.html">Team</a></li>
@@ -126,6 +133,9 @@
               <li><a href="#">Indoor LCD Display</a></li>
               <li><a href="#">Outdoor LCD Display</a></li>
               <li><a href="#">Outdoor LED Display</a></li>
+              <li><a href="#">LCD Advertising Display</a></li>
+              <li><a href="#">Windvane</a></li>
+              <!-- <li><a href="#"></a>Windvane</li> -->
               
 
               <!-- <li><a href="about.html">About</a></li>
