--- a/index.html
+++ b/index.html
@@ -176,40 +176,34 @@
       <div class="carousel-inner" role="listbox">
 
         <!-- Slide 1 -->
-        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-1.jpg)">
+        <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-a.png)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Welcome to <span>Sailor</span></h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea
-                ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem.
-                Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <h2 class="animate__animated animate__fadeInDown">AFLAX: RETAIL <br> PUT YOUR CUSTOMERS IN THE MOOD TO BUY</h2>
+              <p class="animate__animated animate__fadeInUp">Create a fully-branded in-store experience that drives lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers looking for something special, we offer a range of innovative digital signage retail solutions to make your store stand out. to buy again and again.</p>
+              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-2.jpg)">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-b.jpg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Lorem Ipsum Dolor</h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea
-                ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem.
-                Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <h2 class="animate__animated animate__fadeInDown">AFLAX: RESTAURANTS <br> COMPLETE THE DINING EXPERIENCE</h2>
+              <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs and content using our cloud software. It’s all on the menu.</p>
+              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-3.jpg)">
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-c.jpg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">Sequi ea ut et est quaerat</h2>
-              <p class="animate__animated animate__fadeInUp">Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea
-                ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem.
-                Esse doloremque accusamus repellendus deleniti vel. Minus et tempore modi architecto.</p>
-              <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+              <h2 class="animate__animated animate__fadeInDown">AFLAX: HEALTHCARE <br>DELIVER A HEALTHY DOSE OF MUSIC – AND MORE</h2>
+              <p class="animate__animated animate__fadeInUp">Creating a comfortable experience and operating an efficient practice are the keys to a high level of patient care. With Aflax’s proven healthcare solutions, you’ll provide a soothing and welcoming environment for your patients. Bundle solutions to reduce overhead costs for maximum ROI.</p>
+              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
         </div>
