--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
+  <!-- Custome CSS File -->
+  <link rel="stylesheet" href="assets/css/custom.css">
+
   <!-- =======================================================
   * Author: Abu Saleh Faysal
   ======================================================== -->
@@ -41,7 +44,8 @@
   <header id="header" class="fixed-top d-flex align-items-center">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Aflax Digital Signage</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"> <span class="red">Aflax</span><span class="orange">
+            Digital</span><span class="green"> Signage</span> </a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -94,14 +98,14 @@
               <li><a href="#">Stadium's</a></li>
               <li><a href="#">Telecommunications </a></li>
               <li><a href="#">Banks </a></li>
-              <li><a href="#">Power Electric supplies  </a></li>
+              <li><a href="#">Power Electric supplies </a></li>
               <li><a href="#">Factories </a></li>
               <li><a href="#">Car show </a></li>
               <li><a href="#">Travel Agent </a></li>
               <li><a href="#">Government institutions </a></li>
               <li><a href="#">Construction </a></li>
               <li><a href="#">Water supply </a></li>
-              <li><a href="#">Gym  </a></li>
+              <li><a href="#">Gym </a></li>
 
               <!-- <li><a href="about.html">About</a></li>
               <li><a href="team.html">Team</a></li>
@@ -136,7 +140,7 @@
               <li><a href="#">LCD Advertising Display</a></li>
               <li><a href="#">Windvane</a></li>
               <!-- <li><a href="#"></a>Windvane</li> -->
-              
+
 
               <!-- <li><a href="about.html">About</a></li>
               <li><a href="team.html">Team</a></li>
@@ -179,8 +183,12 @@
         <div class="carousel-item active" style="background-image: url(assets/img/slide/slide-a.png)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">AFLAX: RETAIL <br> PUT YOUR CUSTOMERS IN THE MOOD TO BUY</h2>
-              <p class="animate__animated animate__fadeInUp">Create a fully-branded in-store experience that drives lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers looking for something special, we offer a range of innovative digital signage retail solutions to make your store stand out. to buy again and again.</p>
+              <h2 class="animate__animated animate__fadeInDown"><span class="red">AFLAX: RETAIL</span> <br> PUT YOUR
+                CUSTOMERS IN THE MOOD TO BUY</h2>
+              <p class="animate__animated animate__fadeInUp">Create a fully-branded in-store experience that drives
+                lasting results by creating an Interactive Customer Experience with Aflax Digital Signage. For retailers
+                looking for something special, we offer a range of innovative digital signage retail solutions to make
+                your store stand out. to buy again and again.</p>
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
@@ -190,8 +198,11 @@
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-b.jpg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">AFLAX: RESTAURANTS <br> COMPLETE THE DINING EXPERIENCE</h2>
-              <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs and content using our cloud software. It’s all on the menu.</p>
+              <h2 class="animate__animated animate__fadeInDown"><span class="orange">AFLAX: RESTAURANTS</span> <br>
+                COMPLETE THE DINING EXPERIENCE</h2>
+              <p class="animate__animated animate__fadeInUp">For a restaurant, the right sights and sounds complement
+                great food and service to deliver a consistent experience. Remotely manage a network Of digital a signs
+                and content using our cloud software. It’s all on the menu.</p>
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
@@ -201,8 +212,46 @@
         <div class="carousel-item" style="background-image: url(assets/img/slide/slide-c.jpg)">
           <div class="carousel-container">
             <div class="container">
-              <h2 class="animate__animated animate__fadeInDown">AFLAX: HEALTHCARE <br>DELIVER A HEALTHY DOSE OF MUSIC – AND MORE</h2>
-              <p class="animate__animated animate__fadeInUp">Creating a comfortable experience and operating an efficient practice are the keys to a high level of patient care. With Aflax’s proven healthcare solutions, you’ll provide a soothing and welcoming environment for your patients. Bundle solutions to reduce overhead costs for maximum ROI.</p>
+              <h2 class="animate__animated animate__fadeInDown"><span class="green">AFLAX: HEALTHCARE</span> <br>DELIVER
+                A HEALTHY DOSE OF MUSIC – AND MORE</h2>
+              <p class="animate__animated animate__fadeInUp">Creating a comfortable experience and operating an
+                efficient practice are the keys to a high level of patient care. With Aflax’s proven healthcare
+                solutions, you’ll provide a soothing and welcoming environment for your patients. Bundle solutions to
+                reduce overhead costs for maximum ROI.</p>
+              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 4 -->
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-d.jpg)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown"><span class="red">AFLAX: CONVENIENCE STORE</span>
+                <br>BRING CUSTOMERS BACK WITH Aflax Digital Signage
+              </h2>
+              <p class="animate__animated animate__fadeInUp">Bringing customers back is all about meeting expectations
+                and delivering a consistent experience. With our affordable and proven solutions, you’ll drive in-store
+                traffic and build lasting customer loyalty for the repeat business that convenience stores rely on.
+                Promote high-margin items and drive traffic in-store with Pumpside Messaging. Turnkey programmes
+                designed specifically for convenience store applications.
+              </p>
+              <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
+            </div>
+          </div>
+        </div>
+
+        <!-- Slide 5 -->
+        <div class="carousel-item" style="background-image: url(assets/img/slide/slide-c.jpg)">
+          <div class="carousel-container">
+            <div class="container">
+              <h2 class="animate__animated animate__fadeInDown"><span class="orange">AFLAX: HOSPITALITY</span> <br>PUT
+                THEM IN THE MOOD TO STAY</h2>
+              <p class="animate__animated animate__fadeInUp">Guests are always coming and going. Entice them to come
+                back again and again by creating an engaging, multi-sensory experience they’ll never forget. Whatever
+                your style – boutique, extended stay, or full service – the right audio, visuals and scent can work
+                together to set the distinct mood that speaks to your brand and your clientele, ensuring lasting guest
+                loyalty.</p>
               <a href="#" class="btn-get-started animate__animated animate__fadeInUp scrollto">Contact Us Today</a>
             </div>
           </div>
@@ -227,28 +276,34 @@
     <section id="about" class="about">
       <div class="container">
 
-        <div class="row content">
-          <div class="col-lg-6">
-            <h2>Eum ipsam laborum deleniti velitena</h2>
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assum perenda sruen jonee trave</h3>
+        <div class="row content text-center">
+          <h2>DIGITAL SIGNAGE EVERYONE CAN USE</h2>
+          <br>
+          <br>
+          <div class="col-md-4">
+            <img width="80" height="80" class="img-fluid" src="assets/img/features/content.png" alt="">
+            <br>
+            <br>
+            <h6><b>EASY CONTENT MANAGEMENT</b></h6>
+            <p>With our drag and drop user interface it's simple to set up playlists, schedule content to display
+              certain times of the day, days of the week or months of the year.</p>
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-                aute irure dolor in reprehenderit in</li>
-            </ul>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+          <div class="col-md-4">
+            <img width="80" height="80" class="img-fluid" src="assets/img/features/cloud.png" alt="">
+            <br>
+            <br>
+            <h6><b>CLOUD BASED SOLUTION</b></h6>
+            <p>Control a network of screens across the globe from a single account. Run promotions nationwide, regional
+              or on a specific screen in a specific site.</p>
+          </div>
+          <div class="col-md-4">
+            <img width="80" height="80" class="img-fluid" src="assets/img/features/social.png" alt="">
+            <br>
+            <br>
+            <h6><b>RSS & SOCIAL MEDIA</b></h6>
+            <p>Display information such as news & weather reports or connect your twitter account enabling you to
+              further connect with your customer.
+              specific site.
             </p>
           </div>
         </div>
