--- a/index.html
+++ b/index.html
@@ -272,12 +272,15 @@
 
   <main id="main">
 
-    <!-- ======= About Section ======= -->
+    <!-- ======= Features Section ======= -->
     <section id="about" class="about">
       <div class="container">
 
         <div class="row content text-center">
           <h2>DIGITAL SIGNAGE EVERYONE CAN USE</h2>
+          <br>
+          <br>
+          <br>
           <br>
           <br>
           <div class="col-md-4">
@@ -309,10 +312,137 @@
         </div>
 
       </div>
-    </section><!-- End About Section -->
+    </section><!-- End Features Section -->
+
+    <!-- ======= How it works Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
+
+        <div class="row content text-center">
+          <h2>HOW IT WORKS</h2>
+
+        </div>
+
+      </div>
+    </section><!-- End How it works Section -->
+
+    <!-- ======= What we do Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
+
+        <div class="row content">
+          <div>
+            <h2 class="text-center">WHAT WE DO</h2>
+            <p class="text-center">Our cloud-based interactive digital signage software platform gives users the ability
+              to
+              create easily, manage and deploy digital content to any device, anywhere in the world.</p>
+          </div>
+          <div class="row mt-5">
+            <div class="col-md-4">
+              <h6><b>Hardware</b></h6>
+              <p>Choose from Aflax’s Andriod compact digital signage media player that plugs directly into the back of
+                any
+                commercial screen with minimal wiring or one of our partners embedded display panels – which completely
+                removes the need for any external hardware.</p>
+            </div>
+            <div class="col-md-4">
+              <h6><b>Cloud Based</b></h6>
+              <p>The Aflax interactive digital signage platform is an extremely intuitive digital tool which allows you to easily create, edit, manage, deploy and report on digital content in real-time. It’s all cloud-based which means you don’t have to worry about downloading any software.</p>
+            </div>
+            <div class="col-md-4">
+              <h6><b>Custom Projects</b></h6>
+              <p>Our team can deliver custom applications and creative digital experiences, bespoke to your unique project requirements. Our FREE consultancy process helps us to understand who you want to communicate with, what you want to say and when. We can then select the right combination of products and services which provides you with a bespoke solution.</p>
+            </div>
+          </div>
+
+          <div class="row mt-5">
+            <div class="col-md-4">
+              <h6><b>Internal Signage</b></h6>
+              <p>From internal communications to reception displays you can broadcast videos or content in real-time on screens. With Aflax, digital signage can instantly inform and inspire your audience which increases staff engagement and productivity.</p>
+            </div>
+            <div class="col-md-4">
+              <h6><b>Menu Boards</b></h6>
+              <p>Drive upsells, cross-sells and average purchase amounts at point of sale by displaying dynamic and relevant content to your customers with digital menu boards. The ease of implementation means you can get up and running in minutes, with minimal disruption to your store or restaurant.</p>
+            </div>
+            <div class="col-md-4">
+              <h6><b>Outdoor Signage</b></h6>
+              <p>From roadside totems to outdoor menu boards, there is a wealth of opportunity for using outdoor digital signage to drive traffic to your business. With Aflax, outdoor totems can generate huge footfall by capturing new customers and raising brand awareness.</p>
+            </div>
+          </div>
+
+          <div class="row mt-5">
+            <div class="col-md-4">
+              <h6><b>Video Walls</b></h6>
+              <p>Build video walls of virtually any size or orientation. Enjoy seamless content playback across multiple screens, and even build interactive video walls and multi-screen kiosks.</p>
+            </div>
+            <div class="col-md-4">
+              <h6><b>Digital Shelf Edge</b></h6>
+              <p>Deploy promotional campaigns straight to the shelf edge. Directly influence in-store purchases with product videos, dynamic pricing and offers, loyalty card incentives, online reviews and much more.</p>
+            </div>
+            <div class="col-md-4">
+              <h6><b>Interactive and Intelligent Signage</b></h6>
+              <p>From place and learn and intelligent menu boards to magic mirrors and touch sensor experiences, Aflax provides you with all the tools to build fully interactive applications and signage content with ease.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End What we do Section -->
+    <br>
+    <br>
+    <br>
+    <br>
+    <!-- ======= About Digital Signage Section ======= -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <!-- <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button> -->
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <!-- <img src="assets/img/features-4.png" class="img-fluid" alt="..."> -->
+          <div class="container row">
+            <div class="col-md-5 offset-md-2">
+              <br>
+              <br>
+              <h1><b><span class="red">Simple Digital Signage</span><br>at Your Fingertips.</b></h1>
+              <p>At Aflax, we want every environment and deployer to make the most of their digital displays. That’s why we have developers in-house who can help with bespoke projects. Our digital signage solutions are uniquely versatile, able to integrate with other forms of software. <br>We are the market leader for <span class="text-primary">estate agent digital window displays</span>, integrating with property databases to effortlessly show listings on screen.</p>
+            </div>
+            <div class="col-md-4 offset-md-1">
+              <img src="assets/img/features-4.png" class="img-fluid" alt="...">
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <!-- <img src="assets/img/features-1.png" class="img-fluid" alt="..."> -->
+          <div class="container row">
+            <div class="col-md-4 offset-md-2">
+              <img src="assets/img/features-1.png" class="img-fluid" alt="...">
+            </div>
+            <div class="col-md-5 offset-md-1">
+              <br>
+              <br>
+              <h1><b>Cloud-based <span class="red">User-friendly Editor.</span> </b></h1>
+              <p>Our digital signage solutions are powered by a simple cloud-based CMS. Why choose cloud-based? You can log in from any PC to remotely create and manage content in our <span class="text-primary">drag & drop editor.</span> <br> Through powerful <span class="text-primary">digital signage widgets</span>  combine your images, videos, social media, RSS feeds, live web pages, and more to create engaging presentations. <br>Through <span class="text-primary">digital signage scheduling</span>  automate your content to play at particular times of the day, week, or month. Make any changes and your screens automatically update.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- End Digital Signage Section Section -->
 
     <!-- ======= Clients Section ======= -->
-    <section id="clients" class="clients section-bg">
+    <!-- <section id="clients" class="clients section-bg">
       <div class="container">
 
         <div class="row">
@@ -344,10 +474,10 @@
         </div>
 
       </div>
-    </section><!-- End Clients Section -->
+    </section>End Clients Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
       <div class="container">
 
         <div class="row">
@@ -402,10 +532,10 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section>End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <!-- <section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="row">
@@ -568,7 +698,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section>End Portfolio Section -->
 
   </main><!-- End #main -->
 
