Navigation bar options disabled

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <li><a href="#">How it works</a></li>
               <li><a href="#">Features</a></li>
               <li><a href="#">What we do</a></li>
-              <li><a href="testimonials.html">Customers/Our work</a></li>
+              <li><a href="#">Customers/Our work</a></li>
               <li><a href="#">Solutions/ Industries</a></li>
               <li><a href="#">Contents Editing</a></li>
               <li><a href="#">Screens / Players
@@ -157,12 +157,12 @@
               </li> -->
             </ul>
           </li>
-          <li><a href="services.html">Case Studies</a></li>
-          <li><a href="portfolio.html">Rentals</a></li>
-          <li><a href="pricing.html">Contact</a></li>
+          <li><a href="#">Case Studies</a></li>
+          <li><a href="#">Rentals</a></li>
+          <li><a href="#">Contact</a></li>
           <!-- <li><a href="blog.html">Blog</a></li> -->
 
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="#">Contact Us</a></li>
           <!-- <li><a href="index.html" class="getstarted">Get Started</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
